@@ -10,6 +10,9 @@ lintian (2.5.2) UNRELEASED; urgency=low
       - calls-suidperl-directly
       - suid-perl-script-but-no-perl-suid-dep
 
+  * checks/*:
+    + [NT] Migrated to use new methods in the Lintian::Collect
+      interfaces rather than accessing the Lab directly.
   * checks/{cruft,fields}{,.desc}:
     + [NT] Relocated doc pkg not arch all tag; it was never
       triggered since cruft was a source check and the tag
@@ -149,6 +152,9 @@ lintian (2.5.2) UNRELEASED; urgency=low
     + [NT] Symlink in all components of the source package when
       creating the source entry in the lab.  Also removed legacy
       code for using the old unpack scripts.
+  * lib/Lintian/Collect/Package.pm:
+    + [NT] New file.  This serves as a base for Lintian::Collect
+      modules that can be unpacked.
   * lib/Lintian/Command.pm:
     + [NT] Added support for appending output to files without
       truncating them first via the new out_append and
